--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/jamestchavez/Social-Network-API#readme",
   "dependencies": {
     "express": "^4.18.1",
+    "moment": "^2.29.4",
     "mongoose": "^6.5.4"
   }
 }
